Atualização do css

--- a/Content/Home.css
+++ b/Content/Home.css
@@ -3,7 +3,7 @@
 }
 
 a, h1, h1, h3, h4, h5, h6 {
-    font-family: 'Inter', 'sans-serif';
+    font-family: 'Inter', 'sans-serif' !important;
 }
 
 .homeContent {
