--- a/Views/Shared/_Register.cshtml
+++ b/Views/Shared/_Register.cshtml
@@ -12,6 +12,8 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/register.css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
