--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -99,10 +99,10 @@
         </p>
     </div>
     <div class="aboutContainer">
-        <img src="~/Images/banner 3.jpg" alt="notImage" class="img-not-found" />
-        <p class="text-not-found">
-            Pessoas Encontradas <strong>@ViewBag.PessoasEncontradas</strong>
+        <p class="text-encontrado">
+            Reconectamos <strong>@ViewBag.PessoasEncontradas</strong> vidas
         </p>
+        <img src="~/Images/banner 1.png" alt="notImage" class="img-not-found" />
     </div>
 </div>
 
