--- a/Views/Responsavels/EditarPerfil.cshtml
+++ b/Views/Responsavels/EditarPerfil.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.DataNascimento, "{0:MM/dd/yyyy}", htmlAttributes: new { @class = "form-control", @type = "date" })
+                @Html.TextBoxFor(model => model.DataNascimento, "{0:yyyy-MM-dd}", htmlAttributes: new { @class = "form-control", @type = "date" })
                 @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
             </div>
         </div>
