Correção em escrita errada

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         <div class="menulink"><a href="~/Desaparecido/ListMeusDesaparecidos" class="link">Meus Desaparecidos</a></div>
                         <div class="menulink"><a href="~/Desaparecido/InitialRegisterDesaparecido" class="link">Cadastrar Desaparecidos</a></div>
                         <div class="menulink"><a href="~/Vulneravels/ListMeusVulneraveis" class="link">Meus Vulneráveis</a></div>
-                        <div class="menulink"><a href="~/Vulneravels/InitialRegisterVulneravel" class="link">Cadastrar Vulneravel</a></div>
+                        <div class="menulink"><a href="~/Vulneravels/InitialRegisterVulneravel" class="link">Cadastrar Vulnerável</a></div>
                     </div>
 
                     <div class="menuContainer">
