--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <div class="MS-content">
         @foreach (var item in Model)
         {
-            if (item.Ativo)
+            if (item.Ativo && !item.IsDeleted)
             {
                 <div class="item">
                     <a href="~/Desaparecido/ListOneDesaparecido/@item.Id" style="text-decoration: none; color: black">
